# jk-bootcamp-ai

./: .gitignore  Makefile
.cursor/commands/: optimize-images-enhanced.md
.cursor/rules/: spring-boot-backend.mdc  style-taikang.md
.github/workflows/: ci.yml  pre-commit.yml
my-project-demo/02-db-query/.specify/: README.md
my-project-demo/02-db-query/.specify/memory/: constitution.md
my-project-demo/project-alpha/: README.md
my-project-demo/project-alpha/backend/: .gitignore  PHASE3_COMPLETE.md  PHASE5_COMPLETE.md  README.md
my-project-demo/specs/01-project-alpha/: Instructions.md
specs/my-w1/: Instructions.md  design.md  requirements.md
specs/my-w1/project-alpha/: .gitignore  PHASE1-COMPLETE.md  PHASE5-6_SUMMARY.md  docker-compose.yml  e2e_test.sh
specs/my-w1/project-alpha/backend/: PHASE2_COMPLETE.md  PHASE6_COMPLETE.md  env.example  pyproject.toml  pytest.ini  requirements.txt  run_seed.py  seed.sql  start.sh
specs/my-w1/project-alpha/backend/alembic/: env.py
specs/my-w1/project-alpha/backend/alembic/versions/: ba0818e1179a_initial_migration.py
specs/my-w1/project-alpha/backend/app/: __init__.py  config.py  main.py
specs/my-w1/project-alpha/backend/app/api/: __init__.py
specs/my-w1/project-alpha/backend/app/crud/: tags.py  tickets.py
specs/my-w1/project-alpha/backend/app/models/: ticket.py
specs/my-w1/project-alpha/backend/app/schemas/: __init__.py  tag.py
specs/my-w1/project-alpha/backend/tests/: test_api_tags.py  test_api_tickets.py  test_crud_tickets.py  test_integration.py
specs/w1-my/: implementation-plan.md
(+62 files in other folders)
